Olog/public_html/static/css/style.scss
/*
 * Common styles used in all files
 *
 * @author: Dejan DeÅ¾man <dejan.dezman@cosylab.com>
 */


@import 'variables.scss';
/* css for timepicker */
@import 'ui_timepicker.scss';
@import 'hidden.scss';

html, body {
	@include space-reset;
	height: 100%;
	width: 100%;
}

.bold {
	font-weight: bold;
}

/**
 * Overwrite bootstrap styles to support column resizing
 */
.container-fluid.content-area {
	position:absolute;
	top:$navbar-height;
	bottom:0;
	left:0;
	right:0;
	padding:0;
	.full-row{
		display:block;
		@include space-reset;
		height:100%;
		width:100%;
	}
}

/**
 * Main navigation bar styles
 */
nav.navbar{
	height:$navbar-height;
	margin-bottom:0;
	a.navbar-brand{
		border-right:1px solid $nav-font-color;
	}
	.dropdown-menu{
		&.user_dropdown_menu{
			min-width:245%;
		}
		border:1px solid $nav-font-color;
		border-top:0; // overwrite for placement
		a{
			&:hover{
				background-color:$gray-400;
			}
		}
	}
	.navbar-collapse.collapse, .navbar-collapse.collapsing {
		background-color:$nav-bg;
		&.in{
			.dropdown-menu{
				min-width:100%;
			}
			fieldset{
				color:white;
				legend{
					color:white;
				}
			}
		}
	}
	.version {
		font-size: 10px;
		@include space-reset;
	}
	.nav-btn-group{
		margin-left:15px;
		position:relative;
		li{
			a{
				padding-left:10px;
				padding-right:10px;
			}

			&:last-child{
				position:initial;
			}
		}
		ul.dropdown-menu{
			min-width:0;
			width:100%;
			position:absolute;
			left:0;
			right:0;
			top:100%;
			a{
				padding-left:15px;
				padding-right:15px;

			}
		}
	}
}

.glyphicon{
	&.icon-white{
		color:white;
	}
}

//overwrite bootstrap
h5, h4{
	font-weight:bolder;
}

h3{
	margin:0;
}

.well {
	@include space-reset;
	border:1px solid $gray-500;
	border-top:0;
	border-bottom:0;
}

.clear {
	clear: both;
}

.margin-left {
	margin-left: 10px;
}

.btn{
	background-color:transparent;
	color:$blue-gray-700;
	transition:background-color .75s, color .75s;
	&:hover{
		color: $blue-200;
		background:none;
		box-shadow:none;
	}
	&.btn-success{
		color:white;
		border:1px solid $green-100;
		background-color:lighten($green-100, 15%);
		&:hover{
			background-color:$green-100;
		}
	}
	&.btn-danger{
		color:white;
		border:1px solid $pink-100;
		background-color:lighten($pink-100, 15%);
		&:hover{
			background-color:$pink-100;
		}
	}
	&.btn-primary{
		 color:white;
		 border:1px solid darken($blue-gray-500, 5%);
		 background-color:$blue-gray-500;
		 &:hover{
			 background-color:$blue-gray-500;
		 }
	 }
}
pre{
	white-space:pre-wrap;
	word-wrap:normal;
	border:none;
	background-color:transparent;
	word-break:keep-all;
}

.container-scroll-middle .log-content-area{
	position:relative;
	display:block;
	height:100%;

	.form-search-box {
		position:absolute;
		top:0;
		left:0;
		right:0;
		height:$search-height;
		z-index:502;
		background-color:$gray-100;
		display:block;
		padding:5px;
		margin-bottom: 0px;
		border-bottom:1px solid $gray-700;
		box-shadow: 0 4px 4px -2px $gray-700;
		-moz-box-shadow: 0 4px 4px -2px $gray-700;
		-webkit-box-shadow: 0 4px 4px -2px $gray-700;
		.input-group{
			width:100%;
			display:block;
			.search-query-clean {
				position: absolute;
				right:95px;
				top:50%;
				transform:translateY(-50%);
				cursor:pointer;
				color:$gray-500;
				&:hover{
					color:$red-100;
				}
			}
			input{
				&:focus{
					z-index:2;
					outline:0;
					box-shadow:none;
					//overwrite index in bootstrap due to search query clean btn
				}
			}
		}
		.search-checkbox{
			margin:2px;
			display:inline-block;
			input[type=checkbox]{
				position:absolute;
				display:none;
				&+label{
					//-webkit-appearance: push-button;
					-moz-appearance: button;
					display: inline-block;
					cursor:pointer;
					outline:none;
					padding:2.5px 5px;
					color:white;
					font-weight:normal;
					border-radius:5px;
					font-size:$sm-font;
					background-color:lighten($pink-100,20%);
					border:1px solid $pink-100;
					transition:background-color 1s, border 1s;
					&:hover{
						border:1px solid $green-100;
						background-color:lighten($green-100, 15%);
					}
					&:before{
						font-family: 'Glyphicons Halflings';
						content: "\e083";
					}
				}
				&:checked{
					&+label{
						background-color:lighten($green-100, 15%);
						border:1px solid $green-100;
						&:before{
							font-family: 'Glyphicons Halflings';
							content: "\e067";
						}
						&:hover{
							border:1px solid $pink-100;
							background-color:lighten($pink-100,20%);
						}
					}
				}
			}
		}
	}

	.logs-area{
		position:absolute;
		top:$search-height;
		overflow:auto;
		overflow-x: hidden;
		left:0;
		right:0;
		bottom:0;
	}
}

//typeahead div
.ui-autocomplete{
	z-index:502;
	padding:0;
	@include border-radius(0);
	li{
		a.ui-state-focus{
			background:none;
			@include border-radius(0);
			color:$green-200;
			border:1px solid $green-200;
			padding:3px 7px;
			cursor:pointer;
		}
	}
}

@media (max-width: 1023px) {

	nav.navbar{
		.nav-btn-group{
			ul.dropdown-menu{
				position:relative;
			}
		}
	}

	.container-left, .container-middle, .container-right, .container-middle-right {
		float: none;
		padding: 0px 20px 20px 20px;
		display:block;
		width:100%;

	}
	.container-scroll-middle{
		min-height:25vh;
		.log-content-area{
			width:100%;
			.form-search-box, .logs-area{
				display:block;
				position:relative;
				&.logs-area{
					top:0;
					width:100%;
				}
			}
		}
	}

	/*
	 * Back to top button
	 */
	#back_to_top_button {
		z-index:502;
		position:fixed;
		bottom: 5px;
		right: 5px;
		width: 50px;
		height: 50px;
		background-color: $blue-200;
		border: 1px solid $gray-500;
		@include border-radius(4px);
		cursor: pointer;
		text-align: center;
		opacity: 0.6;
		display: block;
		i{
			margin-top: 15px;
		}
	}

	.well{
		border-top:1px solid $gray-500;
		border-bottom:1px solid $gray-500;
	}
}

@media (min-width: 1024px) {

	.container-resize, .container-resize2,.container-resize3 {
		position: fixed;
		left: 20%;
		top:0;
		width: $resize-bar-wid;
		bottom: 0;
		z-index: 501;
		div {
			position: relative;
			height: 100%;
			width: 100%;
			&:hover {
				cursor: col-resize;
			}
		}
	}
	.container-resize2{
		left: 50%;
	}
	.container-resize3{
		left: 80%;
	}

	.container-left, .container-middle, .container-right, .container-middle-right{
		position: absolute;
		top: 0;
		bottom: 0;

	}
	.container-left {
		left: 0;
		width: 20%;
		.well{
			border-left:0;
			border-right:0;
		}
	}

	.container-middle {
		left: 20%;
		width: 30%;
	}

	.container-right {
		right: 0;
		width: 50%;
	}

	.container-middle-right {
		right: 0;
		width: 80%;
	}

	/* Scrollable columns START*/
	.container-scroll, .container-scroll-middle ,.container-scroll-last-one {
		position: absolute;
		@include border-radius(0);
		top:0;
		left:0;
		right:0;
		bottom:0;
		overflow-y: auto;
	}
	.container-scroll-last-one .well{
		border-left:0;
		border-right:0;
	}
	.container-scroll{
		border-left:0;
		border-right:0;
	}

	.container-modify-right .well{
		border-right:0;
	}
	/* Scrollable columns END*/
	#back_to_top_button {
		display: none;
	}
}

.float_right {
	float: right;
}

.float_right_padding {
	padding: 3px;
}

.close_label, .close_label:hover, .close_label:focus {
	color: white;
	text-decoration: none;
}

.user_dropdown_menu {
	padding: 10px;
}

.search_input {
	display: inline-block;
	width: 70%;
	padding-right: 40px !important;
}

.disable_selecting_text {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: moz-none;
	-ms-user-select: none;
}


.login_error, #new_logbook_error_block, #error_block {
	margin-bottom:0;
	color:$red-100;
	@include border-radius(0);
}

#top_container {
	display: block;
}

/**
 * Overwrite styling for tags to match search bar tags
 * 	original file: lib/bootstrap-tagmanager.css
 */
.tm-tag{
	&.tm-tag-warning, &.tm-tag-info{
		color:white;
		padding:2px 5px;
		font-size:$xsm-font;
		border-radius:2px;
	}
	&.tm-tag-warning{
		$col: lighten(get('logbook', $tag-colors), 5%);
		background-color: $col;
		border:0;
	}
	&.tm-tag-info{
		$col: lighten(get('tagt', $tag-colors), 2%);
		background-color: $col;
		border:0;
	}
}

@import 'log.scss';
@import 'multilist.scss';
@import 'printlog.scss';
@import 'search_input.scss';

